--- a/FitnessGuru-Main/packages.config
+++ b/FitnessGuru-Main/packages.config
@@ -6,8 +6,14 @@
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.ChakraCore" version="2.4.8" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Core" version="2.4.9" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="2.4.9" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.V8" version="2.4.2" targetFramework="net461" />
+  <package id="JavaScriptEngineSwitcher.Vroom" version="2.4.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
+  <package id="JSPool" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.1" targetFramework="net461" />
@@ -41,8 +47,15 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Moment.js" version="2.9.0" targetFramework="net461" />
+  <package id="MsieJavaScriptEngine" version="2.2.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="React.Core" version="3.4.1" targetFramework="net461" />
+  <package id="React.Web" version="3.4.1" targetFramework="net461" />
+  <package id="React.Web.Mvc4" version="3.4.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
+  <package id="VroomJs" version="1.2.3" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
