--- a/FitnessGuru-Main/packages.config
+++ b/FitnessGuru-Main/packages.config
@@ -53,8 +53,14 @@
   <package id="React.Core" version="3.4.1" targetFramework="net461" />
   <package id="React.Web" version="3.4.1" targetFramework="net461" />
   <package id="React.Web.Mvc4" version="3.4.1" targetFramework="net461" />
+  <package id="Sendgrid" version="9.10.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="VroomJs" version="1.2.3" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
