--- a/FitnessGuru-Main/FitnessGuru-Main.csproj
+++ b/FitnessGuru-Main/FitnessGuru-Main.csproj
@@ -622,6 +622,7 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\memberSessionIndex.js" />
     <Content Include="Scripts\memberSessions.js" />
     <Content Include="Scripts\qTip\jquery.qtip.css" />
     <Content Include="Scripts\qTip\jquery.qtip.js" />
