Web config changes for Azure Deployment Code fix to deal with time, UTC time is now converted to Australian time and used for comparison

--- a/FitnessGuru-Main/FitnessGuru-Main.csproj
+++ b/FitnessGuru-Main/FitnessGuru-Main.csproj
@@ -621,6 +621,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <None Include="Properties\PublishProfiles\FitnessGuru-Main - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\memberSessionIndex.js" />
     <Content Include="Scripts\memberSessions.js" />
