--- a/FitnessGuru-Main/Web.Release.config
+++ b/FitnessGuru-Main/Web.Release.config
@@ -8,12 +8,19 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
+    
   -->
+  <connectionStrings>
+    <add name="DefaultConnection"
+         connectionString="Server=tcp:fitnessgurudb.database.windows.net,1433;Initial Catalog=FitnessGuru-Main;Persist Security Info=False;User ID=richuvjohn;Password=login_FG1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+
+    <add name="FitnessGuruModelContainer" 
+         connectionString="metadata=res://*/Models.FitnessGuruModel.csdl|res://*/Models.FitnessGuruModel.ssdl|res://*/Models.FitnessGuruModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:fitnessgurudb.database.windows.net,1433;Initial Catalog=FitnessGuru-App;Persist Security Info=False;User ID=richuvjohn;Password=login_FG1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" 
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
