--- a/FitnessGuru-Main/Web.config
+++ b/FitnessGuru-Main/Web.config
@@ -9,8 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FitnessGuru-Main-20180904012523.mdf;Initial Catalog=aspnet-FitnessGuru-Main-20180904012523;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="FitnessGuruModelContainer" connectionString="metadata=res://*/Models.FitnessGuruModel.csdl|res://*/Models.FitnessGuruModel.ssdl|res://*/Models.FitnessGuruModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FitnessGuru.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FitnessGuru-Main-20180904012523.mdf;Initial Catalog=aspnet-FitnessGuru-Main-20180904012523;Integrated Security=True" providerName="System.Data.SqlClient" /> 
+     <add name="FitnessGuruModelContainer" connectionString="metadata=res://*/Models.FitnessGuruModel.csdl|res://*/Models.FitnessGuruModel.ssdl|res://*/Models.FitnessGuruModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FitnessGuru.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <!--<add name="DefaultConnection" connectionString="Data Source=tcp:fitnessgurudb.database.windows.net,1433;Initial Catalog=FitnessGuru-Main;Persist Security Info=False;User ID=richuvjohn;Password=login_FG1;MultipleActiveResultSets=False;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="FitnessGuruModelContainer" connectionString="metadata=res://*/Models.FitnessGuruModel.csdl|res://*/Models.FitnessGuruModel.ssdl|res://*/Models.FitnessGuruModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:fitnessgurudb.database.windows.net,1433;Initial Catalog=FitnessGuru-App;Persist Security Info=False;User ID=richuvjohn;Password=login_FG1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
